--- a/src/css/deta.css
+++ b/src/css/deta.css
@@ -1,5 +1,19 @@
 /* modals */
 
+.modal_btn_row {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: var(--x2) var(--x2);
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent !important;
+}
+
 /* /* save as to deta */
 
 .save_text_block {
@@ -29,16 +43,6 @@
     color: var(--a6);
 }
 
-.save_modal_btn_row {
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: var(--x2) var(--x2);
-}
-
 .save_confirm_btn {
     display: none;
     background-color: var(--c6);
@@ -46,4 +50,39 @@
 
 .save_confirm_btn:hover {
     background-color: var(--c8);
+}
+
+/* /* open from deta */
+
+.open_title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: var(--x2);
+}
+
+.open_drawing_list {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--d15);
+    border-radius: var(--x1);
+    max-height: 300px;
+    width: 400px;
+    margin-top: var(--x8);
+    margin-bottom: var(--x8);
+    overflow-y: scroll;
+}
+
+.open_drawing_list a{
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+    height: 30px;
+    padding-left: var(--x2);
+    padding-right: var(--x2);
+    color: var(--z3);
+}
+
+.open_drawing_list a:hover{
+    color: var(--z1);
+    background-color: var(--d15);
 }
