--- a/src/css/deta.css
+++ b/src/css/deta.css
@@ -91,3 +91,117 @@
     cursor: default !important;
     background-color: transparent !important;
 }
+
+/* Share */
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  
+  input:checked + .slider {
+    background-color: var(--d8);
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px var(--d8);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  .share_btn_div{
+    position: relative;
+    color: var(--z3);
+    display: inline-block;
+}
+.share_btn {
+    cursor: pointer;
+    display: inline-block;
+    padding: 7px 10px;
+    color: var(--z15);
+    position: relative;
+    height: 16px;
+    vertical-align: top;
+}
+
+.share-container {
+    display: flex;
+    align-items: center;
+  }
+.share_info {
+    margin-right: 2rem;
+}
+
+.share_url {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+.url {
+    color: var(--z4);
+    background-color: var(--z14);
+    padding: .5rem 0.5rem;
+    overflow-y: hidden;
+    resize: none;
+    height: 1rem;
+    font-size: 16px;
+    font-family: inherit;
+    font-weight: bold;
+    border: none;
+}
+.copy{
+    display: grid;
+    place-items: center;
+    background-color: var(--z12);
+    max-width: 5rem;
+    color: black;
+    font-weight: bold;
+}
+
+.share_links{
+    display: none;
+}
